# atlas

./: .travis.yml  TODO  atlas.cabal  package.yaml  stack.yaml
app/: histToYoda.hs  run-atlas-dump.hs  run-atlas-hadd.hs  run-atlas-toyoda.hs
data/: XSection-MC15-13TeV-fromSusyGrp.data  XSection-MC15-13TeV.data
src/: Atlas.hs
src/Atlas/: Corrected.hs  CrossSections.hs  DataMC.hs  Histogramming.hs  PhysObj.hs  ProcessInfo.hs  ScaleFactor.hs  Streaming.hs  StrictHashMap.hs  StrictMap.hs  ToYoda.hs  Variation.hs
src/Data/Atlas/: Corrected.hs  CrossSections.hs  DataMC.hs  Histogramming.hs  PhysObj.hs  ProcessInfo.hs  PtEtaPhiE.hs  ToYoda.hs  Variation.hs
src/Data/Serialize/: CTypes.hs  ZipList.hs
