name: atlas
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: cspollard@gmail.com
synopsis: conveniences for Atlas analysis
description:
    conveniences for Atlas analysis
category: Data
author: Chris Pollard

source-repository head
    type: git
    location: http://github.com/cspollard/atlas

library
    exposed-modules:
        Atlas.CrossSections
        Atlas.DataMC
        Atlas.Histogramming
        Atlas.ProcessInfo
        Atlas.Variation
        Atlas.ScaleFactor
        Atlas.PhysObj
        Atlas.ToYoda
        Atlas.Streaming
        Atlas
    build-depends:
        base -any,
        lens -any,
        mtl -any,
        mmorph -any,
        exceptions -any,
        contravariant -any,
        profunctors -any,
        bifunctors -any,
        deepseq -any,
        transformers -any,
        mtl -any,
        these -any,
        keys -any,
        foldl -any,
        bytestring -any,
        text -any,
        linear -any,
        containers -any,
        unordered-containers -any,
        hashable -any,
        attoparsec -any,
        cereal -any,
        vector -any,
        zlib -any,
        optparse-applicative -any,
        regex-base -any,
        regex-posix -any,
        pipes -any,
        pipes-bytestring -any,
        pipes-parse -any,
        streaming-commons -any,
        variation -any,
        histogram-fill -any,
        hhep -any,
        histogram-extras -any,
        semigroupoids -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall

executable  run-atlas-hadd
    main-is: app/run-atlas-hadd.hs
    build-depends:
      base -any,
      lens -any,
      atlas -any,
      optparse-applicative -any

executable  run-atlas-dump
    main-is: app/run-atlas-dump.hs
    build-depends:
      base -any,
      lens -any,
      atlas -any,
      text -any,
      optparse-applicative -any,
      pipes -any
